home insurange page design changes

--- a/src/home-insurance/11-animal-details.html
+++ b/src/home-insurance/11-animal-details.html
@@ -326,7 +326,7 @@
                                                                                 <a class="btn-add mt-3" href="#">
                                                                                     <img src="../images/add-pluse-circle.svg"
                                                                                         alt="Add" class="icon" />
-                                                                                    Add New type
+                                                                                    Add Another
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -486,7 +486,7 @@
                                                                                 <a class="btn-add mt-3" href="#">
                                                                                     <img src="../images/add-pluse-circle.svg"
                                                                                         alt="Add" class="icon" />
-                                                                                    Add New type
+                                                                                    Add Another
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -647,7 +647,7 @@
                                                                                 <a class="btn-add mt-3" href="#">
                                                                                     <img src="../images/add-pluse-circle.svg"
                                                                                         alt="Add" class="icon" />
-                                                                                        Add New type
+                                                                                        Add Another
                                                                                 </a>
                                                                             </div>
                                                                         </div>
@@ -693,7 +693,7 @@
                                         <a class="btn-add" href="#">
                                             <img src="../images/add-pluse-circle.svg"
                                                 alt="Add" class="icon" />
-                                            Add Kind
+                                                Add Animal
                                         </a>
                                     </div>
                                     <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span>
