--- a/src/home-insurance/7-property-payment-info.html
+++ b/src/home-insurance/7-property-payment-info.html
@@ -205,14 +205,14 @@
                                     <div class="vehicle-details">
                                         <div class="row g-3">
                                             <div class="col-12">
+                                                <h5 class="fs-14 text-gray">Select company you make payment to</h5>
                                                 <div class="f-group max-width-100">
 
                                                     <div class="f-dropdown selectDropdown"><select
                                                             class="f-control f-dropdown"
                                                             placeholder="Select company you make payment to"
                                                             id="secondaryHome">
-                                                            <option value="">Select company you make payment to</option>
-                                                            <option value="1">Own home/ no mortgage
+                                                            <option value="1">Own home / no mortgage
                                                             </option>
                                                             <option value="2">Account 2
                                                             </option>
@@ -269,7 +269,7 @@
 
                                                                             <div class="f-dropdown selectDropdown">
                                                                                 <select class="f-control f-dropdown"
-                                                                                    placeholder="state"
+                                                                                    placeholder="State"
                                                                                     id="selectState">
                                                                                     <option value="">Select State
                                                                                     </option>
@@ -327,6 +327,8 @@
                                                                                     </option>
                                                                                     <option value="3">Mortgagee
                                                                                     </option>
+                                                                                    <option value="4">Other
+                                                                                    </option>
                                                                                 </select>
                                                                             </div>
                                                                         </div>
@@ -346,11 +348,9 @@
                                                                                     id="secondaryHome">
                                                                                     <option value=""> Who pays the
                                                                                         insurance bill</option>
-                                                                                    <option value="1">Option 1
+                                                                                    <option value="1">Me
                                                                                     </option>
-                                                                                    <option value="2">Option 2
-                                                                                    </option>
-                                                                                    <option value="3">Mortgagee
+                                                                                    <option value="2">My mortgage company
                                                                                     </option>
                                                                                 </select>
                                                                             </div>
