--- a/src/home-insurance/8.3-personal-info-LLC.html
+++ b/src/home-insurance/8.3-personal-info-LLC.html
@@ -212,11 +212,13 @@
                                                         <select class="f-control f-dropdown"
                                                             placeholder="Select the type of ownership" id="1">
                                                             <option value="">Select the type of ownership</option>
-                                                            <option value="1">Additional intrest
+                                                            <option value="1">Individual
                                                             </option>
-                                                            <option value="2">Individual
+                                                            <option value="2">Corporation
                                                             </option>
                                                             <option value="3" selected>LLC
+                                                            </option>
+                                                            <option value="4">Trust
                                                             </option>
                                                         </select>
                                                     </div>
@@ -269,7 +271,7 @@
                                                                     <hr>
                                                                     <div class="col-md--4 col-12 mt-0">
                                                                         <div class="me-3">
-                                                                            <h5 class="fs-16">Beneficiary named?</h5>
+                                                                            <h5 class="fs-16">Any other properties owned by this entity?</h5>
                                                                             <div
                                                                                 class="d-flex align-items-center justify-content-start">
                                                                                 <div
@@ -389,12 +391,10 @@
                                                                                     <option value="">Select the type
                                                                                         of
                                                                                         relationship</option>
-                                                                                    <option value="1">Option 1
-                                                                                    </option>
-                                                                                    <option value="2">Option 2
-                                                                                    </option>
-                                                                                    <option value="3">Other
-                                                                                    </option>
+                                                                                        <option value="1">Co-Owner
+                                                                                        </option>
+                                                                                        <option value="2">Spouse
+                                                                                        </option>
                                                                                 </select>
                                                                             </div>
                                                                         </div>
