--- a/src/home-insurance/8-personal-info.html
+++ b/src/home-insurance/8-personal-info.html
@@ -213,12 +213,13 @@
                                                             placeholder="Select the type of ownership"
                                                             id="1">
                                                             <option value="">Select the type of ownership</option>
-                                                            <option value="1">Additional intrest
+                                                            <option value="1">Individual
                                                             </option>
-                                                            <option value="2">Additional
-                                                                insurance
+                                                            <option value="2">Corporation
                                                             </option>
-                                                            <option value="3">Mortgagee
+                                                            <option value="3">LLC
+                                                            </option>
+                                                            <option value="4">Trust
                                                             </option>
                                                         </select>
                                                     </div>
