--- a/src/home-insurance/8.2-personal-info-Individual.html
+++ b/src/home-insurance/8.2-personal-info-Individual.html
@@ -213,11 +213,13 @@
                                                             placeholder="Select the type of ownership"
                                                             id="1">
                                                             <option value="">Select the type of ownership</option>
-                                                            <option value="1">Additional intrest
+                                                            <option value="1" selected>Individual
                                                             </option>
-                                                            <option value="2" selected>Individual
+                                                            <option value="2">Corporation
                                                             </option>
-                                                            <option value="3">Mortgagee
+                                                            <option value="3">LLC
+                                                            </option>
+                                                            <option value="4">Trust
                                                             </option>
                                                         </select>
                                                     </div>
@@ -290,11 +292,9 @@
                                                                             <div class="f-dropdown selectDropdown"><select class="f-control f-dropdown"
                                                                                     placeholder="Select relationship" id="secondaryHome">
                                                                                     <option value="">Select the type of relationship</option>
-                                                                                    <option value="1">Option 1
+                                                                                    <option value="1">Co-Owner
                                                                                     </option>
-                                                                                    <option value="2">Option 2
-                                                                                    </option>
-                                                                                    <option value="3">Other
+                                                                                    <option value="2">Spouse
                                                                                     </option>
                                                                                 </select>
                                                                             </div>
