--- a/src/home-insurance/8.4-personal-info-trust.html
+++ b/src/home-insurance/8.4-personal-info-trust.html
@@ -213,11 +213,13 @@
                                                             placeholder="Select the type of ownership"
                                                             id="secondaryHome">
                                                             <option value="">Select the type of ownership</option>
-                                                            <option value="1">Option 1
+                                                            <option value="1">Individual
                                                             </option>
-                                                            <option value="2">Option 2
+                                                            <option value="2">Corporation
                                                             </option>
-                                                            <option value="3" selected>Trust
+                                                            <option value="3">LLC
+                                                            </option>
+                                                            <option value="4" selected>Trust
                                                             </option>
                                                         </select>
                                                     </div>
