--- a/src/home-insurance/8.5-personal-info-Corporation.html
+++ b/src/home-insurance/8.5-personal-info-Corporation.html
@@ -212,11 +212,13 @@
                                                     <div class="f-dropdown selectDropdown"><select class="f-control f-dropdown"
                                                             placeholder="Select the type of ownership" id="secondaryHome">
                                                             <option value="">Select the type of ownership</option>
-                                                            <option value="1">Option 1
+                                                            <option value="1">Individual
                                                             </option>
-                                                            <option value="2">Option 2
+                                                            <option value="2" selected>Corporation
                                                             </option>
-                                                            <option value="3" selected>Corporation
+                                                            <option value="3">LLC
+                                                            </option>
+                                                            <option value="4">Trust
                                                             </option>
                                                         </select>
                                                     </div>
